my resume to template

--- a/src/resume/resume.component.html
+++ b/src/resume/resume.component.html
@@ -1,5 +1,54 @@
 <div class = "prof-csh">
   <p class="userName">
-    Resume  works!
+  KAYLEAH WHELESS 
+Seattle, WA 98118 • 206-759-8769 • kayJus95@gmail.com
+
+RELEVANT SKILLS
+
+•	Microsoft Office Suite	•	Microsoft Excel	•	JavaScript
+•	HTML 5
+•	Angular 
+•	Business Advertisement
+•	MySQL
+•	Business Marketing	•	CSS 
+•	MEAN Stack
+•	Python
+•	Linux/Unix
+•	Business Communications	•	Proficient in REACT 
+•	Full Stack Development
+•	Google Cloud
+•	Windows OS
+•	GitHub
+EXPERIENCE
+Amy Yee Tennis Center, Seattle, WA	 October 2019 – Present                    
+Cashier Attendant 
+•	Utilize ActiveNet to manage guest tennis court reservations, ensuring all payments are made and bookings are accurate 
+•	Implement closing procedures to create daily deposits/reports ensuring tills are balanced at the end of each shift
+•	Provide over the phone support to members for inquiries regarding reservations, products, events, and account management, resolving all issues in a timely manner  
+
+Associated Recreation Council, Seattle, WA	   June 2018 – September 2019                    
+Lead Counselor
+•	Supervised children 40+ at a time including 5 staff members, performing diverse interactives with children and staff to build a happier/healthier community
+•	Advised children with any of their daily challenges they deal with in and out of school, and making sure they have a healthy lifestyle and wellness
+•	Operated fun and educational activities to diverse children and staff, to give them an optimistic point of view of how to have fun
+
+EDUCATION
+Year Up, Seattle, WA	   September 2019 – September 2020
+Year Up is an intensive, competitive technical training and career development program with 250 corporate partners, graduating 4,000 students annually across 19 cities. The program includes college-level courses, professional training, and a six-month internship.
+
+•	Completed coursework in Project Coordination, Web Development, Network System Admin, Professional Skills, and Business Communications, with specialized training in Learning and Development track
+•	Core Value Award (Work Hard Play Hard)
+
+Shoreline Community College, Shoreline, WA	 September 2014 – September 2016
+•	Retail Management and Business Management Certification (No expiration) 
+
+LANGUAGE
+Spanish – Limited working proficiency
+
+EXPERIENCE
+Greater Glory Ministries, Seattle, WA	 August 2019 – October 2019                    
+Bible Child Care
+•	Studied the Bible with children from ages 9 to 13 and maintained structural guidance and advice when it came to questions about the Bible, engaged in activities, festivities, and in order to help with pristine conditions
+
   </p>
 </div>
