--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,17 @@
     color: rgb(31, 236, 4);
   }
 /*  I am using this class to create a place holder the new created and empty components */
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
