--- a/src/social-media/social-media.component.html
+++ b/src/social-media/social-media.component.html
@@ -1,5 +1,17 @@
-<div class = "prof-csh">
-  <p class="userName">
-    Social-media  works!
-  </p>
-</div>
+<div style="; width: vh; height: vh; border: solid black 2px; background-color: purple;"> 
+<h1>Reviews</h1>
+  <div class="big-review-div">
+    <div class="smaller-review-div">
+      <h1>GitHub</h1>
+      <img src= "https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g_400x400.jpg">
+     <h2>kayleahJ218</h2>
+
+    </div>
+    <div class="smaller-review-div">
+      <h1>LinkedIn</h1>
+      <img src= "https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png">
+      <h2>Kayleah Wheless</h2>
+
+    </div>
+  </div>
+  </div>
