pic upload links

--- a/src/social-media/social-media.component.html
+++ b/src/social-media/social-media.component.html
@@ -1,17 +1,20 @@
-<div style="; width: vh; height: vh; border: solid black 2px; background-color: purple;"> 
-<h1>Reviews</h1>
+ 
+<h1>Where You Can Reach Me At</h1>
   <div class="big-review-div">
     <div class="smaller-review-div">
       <h1>GitHub</h1>
+      
       <img src= "https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g_400x400.jpg">
-     <h2>kayleahJ218</h2>
+      <h2><p><a href="https://github.com/kayleahJ218">kayleahJ218</a></p></h2>
+   
 
     </div>
     <div class="smaller-review-div">
       <h1>LinkedIn</h1>
       <img src= "https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png">
-      <h2>Kayleah Wheless</h2>
+      <h2><p><a href="https://www.linkedin.com/in/kayleah-wheless-222151194">Kayleah Wheless</a></p></h2>
+     
 
-    </div>
+   
   </div>
   </div>
