--- a/src/biography/biography.component.html
+++ b/src/biography/biography.component.html
@@ -1,23 +1,93 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  <title>Kayleah | Goddess</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <style>
+  body {
+    font: 20px Montserrat, sans-serif;
+    line-height: 1.8;
+    color: #f5f6f7;
+  }
+  p {font-size: 16px;}
+  .margin {margin-bottom: 45px;}
+  .bg-1 { 
+    background-color: #1abc9c; /* Green */
+    color: #ffffff;
+  }
+  .bg-2 { 
+    background-color: #474e5d; /* Dark Blue */
+    color: #ffffff;
+  }
+  .bg-3 { 
+    background-color: #ffffff; /* White */
+    color: #555555;
+  }
+  .bg-4 { 
+    background-color: #2f2f2f; /* Black Gray */
+    color: #fff;
+  }
+  .container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
+  .navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+  }
+  .navbar-nav  li a:hover {
+    color: #1abc9c !important;
+  }
+  </style>
+</head>
+<body>
 
-<div class="flex-container">
 
-  <div><p>As the sun goes down, so does the tempature.</p>
-      <img src="https://images.unsplash.com/photo-1502450885075-3a65f20efdd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="img-responsive margin" style="width:100%" alt="Image"></div>  
-  <div>7</div>
-  <div>  
-  <div> <h3 class="margin">What Am I?</h3>
-  <p>I am of both the water carrier aquarius with fishes pouring out as the pisces, and is 24 years of age.</p>
-  <a href="#" class="btn btn-default btn-lg">
-
-  </a>
-  </div></div>
-  <div><h3 class="margin">Where To Find Me?</h3><br></div>  
-  <div><p>At the water, with the wind blowing through thick nappy hair.</p>
-      <img src="https://i.pinimg.com/originals/bd/95/c1/bd95c10cec8c1a0c7d0ad6f6796dd408.jpg" class="img-responsive margin" style="width:100%" alt="Image"></div>
-  <div><div> <h3 class="margin">Who Am I?</h3>
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAo1VorzS2FCLEpLcncQMG062xiJIh9cmj4k4SXnhb2qGByEYT&s" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350vh" height="350vh">
-  <h3>I am a Goddess</h3></div></div>
-  <div>  <div><p>As the water breeze gently blows against my skin, I feel the heat from the sun beamin on the crown of my head</p>
-      <img src="https://ak6.picdn.net/shutterstock/videos/1018739626/thumb/12.jpg" class="img-responsive margin" style="width:100%" alt="Image"></div></div>  
-      <div></div>
+<!-- First Container -->
+<div class="container-fluid bg-1 text-center">
+  <h3 class="margin">Who Am I?</h3>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAo1VorzS2FCLEpLcncQMG062xiJIh9cmj4k4SXnhb2qGByEYT&s" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+  <h3>I am a Goddess</h3>
 </div>
+
+<!-- Second Container -->
+<div class="container-fluid bg-2 text-center">
+  <h3 class="margin">What Am I?</h3>
+  <p> I am of both the water carrier aquarius with fishes pouring out as the pisces, and is 24 years of age.</p>
+
+</div>
+
+<!-- Third Container (Grid) -->
+<div class="container-fluid bg-3 text-center">    
+  <h3 class="margin">Where To Find Me?</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <p>At the water, with the wind blowing through thick nappy hair.</p>
+      <img src="https://i.pinimg.com/originals/bd/95/c1/bd95c10cec8c1a0c7d0ad6f6796dd408.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p>As the water breeze gently blows against my skin, I feel the heat from the sun beamin on the crown of my head</p>
+      <img src="https://ak6.picdn.net/shutterstock/videos/1018739626/thumb/12.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+    <div class="col-sm-4"> 
+      <p>As the sun goes down, so does the tempature.</p>
+      <img src="https://images.unsplash.com/photo-1502450885075-3a65f20efdd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="img-responsive margin" style="width:100%" alt="Image">
+    </div>
+  </div>
+</div>
+
+
+
+</body>
+</html>
