--- a/src/social-media/social-media.component.html
+++ b/src/social-media/social-media.component.html
@@ -1,23 +1,3 @@
- 
-<h1>Where You Can Reach Me At</h1>
-  <div class="big-review-div">
-    <div class="smaller-review-div">
-      <h1>GitHub</h1>
-      
-      <img src= "https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g_400x400.jpg">
-      <h2><p><a href="https://github.com/kayleahJ218">kayleahJ218</a></p></h2>
-   
-
-    </div>
-    <div class="smaller-review-div">
-      <h1>LinkedIn</h1>
-      <img src= "https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png">
-      <h2><p><a href="https://www.linkedin.com/in/kayleah-wheless-222151194">Kayleah Wheless</a></p></h2>
-     
-
-   
-  </div>
-  </div>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -76,7 +56,32 @@
 
 
 
+<!-- First Container -->
+<div class="container-fluid bg-1 text-center">
 
+ 
+<h1>Where You Can Reach Me At</h1>
+  <div class="big-review-div">
+    <div class="smaller-review-div">
+      <h1>GitHub</h1>
+      <p>
+ <a href="https://github.com/kayleahJ218">
+<img border="0" alt="github" src="https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g_400x400.jpg" width="250" height="250">
+</a>
+</p>
+      <h2><p><a href="https://github.com/kayleahJ218">kayleahJ218</a></p></h2>
+   
 
-</body>
-</html>
+    </div>
+    <div class="smaller-review-div">
+      <h1>LinkedIn</h1> 
+      <p>
+<a href="https://www.linkedin.com/in/kayleah-wheless-222151194">
+<img border="0" alt="LinkedIn" src="https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png" width="250" height="250">
+</a>
+</p>
+      <!-- <img src= "https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png"style="width:250px"> -->
+      <h2><p><a href="https://www.linkedin.com/in/kayleah-wheless-222151194">Kayleah Wheless</a></p></h2>
+     
+
+    </div> 
