--- a/src/biography/biography.component.html
+++ b/src/biography/biography.component.html
@@ -13,13 +13,12 @@
   body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
-    color: #f5f6f7;
+    color: ##dbc5ec;
   }
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
     background-color: #1abc9c; /* Green */
-    color: #ffffff;
   }
   .bg-2 { 
     background-color: #474e5d; /* Dark Blue */
