--- a/src/redux-quiz/redux-quiz.component.html
+++ b/src/redux-quiz/redux-quiz.component.html
@@ -10,47 +10,6 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <style>
-  body {
-    font: 20px Montserrat, sans-serif;
-    line-height: 1.8;
-    color: #f5f6f7;
-  }
-  p {font-size: 16px;}
-  .margin {margin-bottom: 45px;}
-  .bg-1 { 
-    background-color: #1abc9c; /* Green */
-    color: #ffffff;
-  }
-  .bg-2 { 
-    background-color: #474e5d; /* Dark Blue */
-    color: #ffffff;
-  }
-  .bg-3 { 
-    background-color: #ffffff; /* White */
-    color: #555555;
-  }
-  .bg-4 { 
-    background-color: #2f2f2f; /* Black Gray */
-    color: #fff;
-  }
-  .container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
-  }
-  .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
-    color: #1abc9c !important;
-  }
-  </style>
 </head>
 <body>
 
@@ -58,10 +17,18 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
+  <div>
+    <h1>Redux Quiz</h1>
+    <h2>Question: What are some Angular JS directives and their purposes in the framework/web building process?</h2>
+    
+      <ol>
+        <li>Answer 1</li>
+        <li>Answer 1</li>
+        <li>Answer 1</li>
+
+      </ol> 
+  </div>
 
   
-QUIZ HERE
-
-
 </div>
 
