--- a/src/social-media/social-media.component.html
+++ b/src/social-media/social-media.component.html
@@ -66,7 +66,7 @@
       <h1>GitHub</h1>
       <p>
  <a href="https://github.com/kayleahJ218">
-<img border="0" alt="github" src="https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g_400x400.jpg" width="250" height="250">
+<img border="0" alt="github" src="https://pbs.twimg.com/profile_images/1157035760085684224/iuxTnT5g_400x400.jpg" width="250" height="250" class="img-fluid" alt="Responsive image">
 </a>
 </p>
       <h2><p><a href="https://github.com/kayleahJ218">kayleahJ218</a></p></h2>
@@ -77,7 +77,7 @@
       <h1>LinkedIn</h1> 
       <p>
 <a href="https://www.linkedin.com/in/kayleah-wheless-222151194">
-<img border="0" alt="LinkedIn" src="https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png" width="250" height="250">
+<img border="0" alt="LinkedIn" src="https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png" width="250" height="250" class="img-fluid" alt="Responsive image">
 </a>
 </p>
       <!-- <img src= "https://cdn3.iconfinder.com/data/icons/material-design-social-icons/152/Linkedin_icon-512.png"style="width:250px"> -->
