--- a/src/redux-quiz/redux-quiz.component.html
+++ b/src/redux-quiz/redux-quiz.component.html
@@ -22,10 +22,14 @@
     <h2>Question: What are some Angular JS directives and their purposes in the framework/web building process?</h2>
     
       <ol>
-        <li>Answer 1</li>
-        <li>Answer 1</li>
-        <li>Answer 1</li>
+       
+        <li>Three Directives:
 
+        <li> ng-init : initializes angular variables to start up. Boots up the app you want to run
+
+        <li> ng-app: auto generates a bootstrap angularJS application. This creates the first "app" you will work on.
+
+        <li> ng-click: Specifies a certain behavior to activate when an element is clicked on. 
       </ol> 
   </div>
 
