--- a/src/redux-quiz/redux-quiz.component.html
+++ b/src/redux-quiz/redux-quiz.component.html
@@ -19,20 +19,6 @@
 <div class="container-fluid bg-1 text-center">
   <div>
     <h1>Redux Quiz</h1>
-    <h2>Question: What are some Angular JS directives and their purposes in the framework/web building process?</h2>
-    
-      <ol>
-       
-        <li>Three Directives:
-
-        <li> ng-init : initializes angular variables to start up. Boots up the app you want to run
-
-        <li> ng-app: auto generates a bootstrap angularJS application. This creates the first "app" you will work on.
-
-        <li> ng-click: Specifies a certain behavior to activate when an element is clicked on. 
-      </ol> 
-  </div>
-
-  
+    <button type="button" class="btn btn-secondary btn-lg"><a href="https://docs.google.com/document/d/1-pJroRqRmBVjgX8XqZL8w7pyf7eJrMil59-KOnA7Qks/edit?usp=sharing">Here is a link to the quiz</a></button>
 </div>
 
